--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -1,36 +1,49 @@
-
 body {
     margin : 0 auto;
     color : #222; 
     background : #F5f3ee; 
     font-family : 'Montserrat', sans-serif;
     padding:0;
+    /* max-width: 100vw;
+    max-height: 100vw; */
     /*background: #262626;*/
 }
 
-.grid{
+/* .grid{
     display: flex;
     flex-direction: column;
     max-width: 1000px;
     margin: 0 auto;
 
-}
+} */
 
-.bienvenue ul {
+#bienvenu ul {
     
     align-items: center;
     justify-content: center;
     display: flex;
 }
 
-.bienvenue ul li {
+#bienvenu ul li {
+    display: inline-block;
     text-align: center;
+    align-items: center;
     list-style: none;
     color: #222;
     font-family: 'Bebas Neue', cursive;
     font-size: 90px;
     letter-spacing: 15px;
     animation: flash 1.4s linear infinite;
+}
+.nav-item,a {
+  display: inline-block;
+  margin: 0px 5px 0px 6px;
+  color: #222;
+  font-size: 22px;
+  font-family: 'Bebas Neue', sans-serif;
+  transition: .4s;
+  text-decoration: none;
+  color: black;
 }
 
 @keyframes flash {
@@ -48,46 +61,45 @@ body {
     }
 }
 
-.bienvenue ul li:nth-child(1){
+#bienvenu ul li:nth-child(1){
     animation-delay: .1s;
 }
-.bienvenue ul li:nth-child(1){
+#bienvenu ul li:nth-child(1){
     animation-delay: .1s;
 }
-.bienvenue ul li:nth-child(2){
+#bienvenu ul li:nth-child(2){
     animation-delay: .2s;
 }
-.bienvenue ul li:nth-child(3){
+#bienvenu ul li:nth-child(3){
     animation-delay: .3s;
 }
-.bienvenue ul li:nth-child(4){
+#bienvenu ul li:nth-child(4){
     animation-delay: .4s;
 }
-.bienvenue ul li:nth-child(5){
+#bienvenu ul li:nth-child(5){
     animation-delay: .5s;
 }
-.bienvenue ul li:nth-child(6){
+#bienvenu ul li:nth-child(6){
     animation-delay: .6s;
 }
-.bienvenue ul li:nth-child(7){
+#bienvenu ul li:nth-child(7){
     animation-delay: .7s;
 }
-.bienvenue ul li:nth-child(8){
+#bienvenu ul li:nth-child(8){
     animation-delay: .8s;
 }
-.bienvenue ul li:nth-child(9){
+#bienvenu ul li:nth-child(9){
     animation-delay: .9s;
 }
 
 .titre {
-    margin: 20px;
     text-align: center;
     color:#2E294E;
     font-family: 'Bebas Neue', cursive;
 }
 
 
-.contenue p{
+#contenue p{
     text-align: justify;
     font-size: 1.3em;
 
@@ -101,7 +113,7 @@ body {
 #photo img{
     border-radius: 50%;
     height: 125px;
-    width: 125px;
+    width: 145px;
     margin: 25px auto;
 }
 /* barre de navigation*/
@@ -112,7 +124,7 @@ body {
 	font-family: 'Bebas Neue', cursive;
 	font-size: 19px;	
 }
-
+/* 
 nav{
   color : #222; 
   font-family: 'Bebas Neue', cursive;
@@ -182,33 +194,49 @@ nav div{
   float: right;
   margin-top: 18px;
 }
+ */
+
+/* navBar */
+ #navbarSupportedContent{
+  display:inline-block;
+  text-align: center;
+} 
+.row,ul{
+  margin: 0 auto;
+}
 
 /*FOOTER*/
-.copy{
-	bottom: 100%;
+footer{
+  position: absolute;
+bottom: 0;
+/* align-content: space-between; */
+
+/* justify-content: space-around; */
+display: contents;
+}
+ .copy{
 	text-align: center;
 	color: black;
 }
-.footersocial {
-width: 100%;
-position:fixed;
+
+#footersocial {
+ width: 100%;
+position:relative;
 text-align: center;
 bottom: 0;
-display: flex;
-flex-direction: column;
-align-items: center;
-background: #f5f3ee;
-}
-.social {
-float: left;
 color: #42433E;
 margin-bottom: 1em;
+/* display: flex;
+flex-direction: column;
+align-items: center; */
+background: #f5f3ee;
 }
 
+
 .social img {
-padding-top: 40px ;
+/* padding-top: 40px ; */
 padding-right: 15px;
-max-height: 40px;
+/* max-height: 40px; */
 transition: 0.8s;
 }
 
@@ -216,31 +244,37 @@ transition: 0.8s;
 padding-top: 20px;
 padding-bottom: 20px;
 transition: 0.5s;
-}
+} 
 
 
-@media screen and (max-width:640px){
+/* @media screen and (max-width:640px){
   .titre{
     margin: 2px 0px 17px 43px;
   }
-  .contenue p{
+  #contenue p{
     text-align: initial;
-    /*margin: 0px 25px 20px 73px;*/
+    margin: 0px 25px 20px 73px;
     margin: -15px 0px 12px 31px
   }
-  .bienvenue {
+  #bienvenu {
     margin: -48px -60px -20px 0px;
     padding: 0px 0 9px 0px;
   }
+  a{
+  float: inherit;
+  }
   nav{
-    padding: 5px 30px;
+  color: #222;
+  font-family: 'Bebas Neue', cursive;
+  letter-spacing: 2px;
+  display: inline-block;
   }
   nav div{
+    float:none;
     margin-top: 0px;
   }
   nav ul li.items{
-    width: 100%;
-    display: none;
+    margin: 0px 10px;
   }
   nav ul li.items.show{
     display: block;
@@ -251,6 +285,7 @@ transition: 0.5s;
     color: black;
 }
 nav ul li.btnNav{
+  position: none;
   display: block;
   background: silver;
   color: black;
@@ -265,13 +300,15 @@ nav ul li.items:hover{
 nav ul li.items:hover:after{
   opacity: 0;
 }
+.social{
+  float: left;
+  color: #42433E;
+  margin-bottom: 1em;
 }
+}  */
 
-li a:hover {
-    text-decoration: underline;
-    color:#ced7df;
-}
-.btnNav{
-    padding: 10px 19px;
-}
+/* li a:hover {
+  text-decoration: underline;
+  color:#ced7df;
+} */
 
